# pg_rollups

./: .gitignore  .lldbinit  CMakeLists.txt  DEVELOPMENT.md  Makefile  NEXT_SESSION.md  QUICKSTART_MACOS.md  README.md  SESSION2_SUMMARY.md  SESSION_4_SUMMARY.md  SESSION_5_SUMMARY.md  SESSION_6_SUMMARY.md  claude.md  rollups.control  test_extension.sh
.cache/clangd/index/: catalog_manager.cpp.7352C102C62201B1.idx  catalog_manager.hpp.6D379CF77328FB8D.idx  continuous_aggregate.cpp.DBB384DB13B1C68A.idx  continuous_aggregate.hpp.A9AD56B6B0CBDD38.idx  rollups.cpp.40DE815269B017D2.idx  types.hpp.A9D873263F2B0DF3.idx
docs/: BUILDING.md  CLASS_DESIGN.md  DEBUGGING.md  HOOKS_GUIDE.md  MACHINE_SETUP.md  POSTGRES_API_REFERENCE.md
include/rollups/: catalog_manager.hpp  continuous_aggregate.hpp  types.hpp
scripts/: README.md  check_environment.sh  lldb_postgres_formatters.py  setup_macos.sh  setup_rollups_extension.sh  test_catalog.sh  test_hook.sh  verify_and_test.sh
sql/: rollups--1.0.sql
src/: catalog_manager.cpp  continuous_aggregate.cpp  rollups.c  rollups.cpp
